Creato con Colaboratory

--- a/Drug_Consumption_Classification.ipynb
+++ b/Drug_Consumption_Classification.ipynb
@@ -6,7 +6,7 @@
       "name": "Drug_Consumption_Classification.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJUROaxDw4nG/4/e+g7Fcz",
+      "authorship_tag": "ABX9TyMdqUP5BbzqLqbY2yw/ys8w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "# Fixing a random seed for all the libraries built on numpy\n",
         "np.random.seed(42)\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -93,9 +93,9 @@
         "names = [name.lower() for name in names]\n",
         "\n",
         "# loading data\n",
-        "tot = pd.read_csv(\"/content/drug_consumption.data\", sep=',', names = names, index_col = \"id\")"
+        "tot = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00373/drug_consumption.data\", sep=',', names = names, index_col = \"id\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -115,13 +115,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 267
         },
-        "outputId": "07d3f31e-449d-4f84-9ad3-a6330d58a417"
+        "outputId": "ee2a9273-b64a-4cc5-9b62-f5e8a2c8fa39"
       },
       "source": [
         "# Visualizing first 5 rows of the dataset\n",
         "tot.head()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -155,7 +155,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6e50b3a8-afd5-4c38-bb67-79b747fa70ed\">\n",
+              "  <div id=\"df-f12bfc7d-55b0-49b0-8517-91d1063c612a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -347,7 +347,7 @@
               "</table>\n",
               "<p>5 rows × 31 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6e50b3a8-afd5-4c38-bb67-79b747fa70ed')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f12bfc7d-55b0-49b0-8517-91d1063c612a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -398,12 +398,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-6e50b3a8-afd5-4c38-bb67-79b747fa70ed button.colab-df-convert');\n",
+              "          document.querySelector('#df-f12bfc7d-55b0-49b0-8517-91d1063c612a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-6e50b3a8-afd5-4c38-bb67-79b747fa70ed');\n",
+              "          const element = document.querySelector('#df-f12bfc7d-55b0-49b0-8517-91d1063c612a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -437,13 +437,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "523ad23a-49c9-4613-ce7d-c9aab0872465"
+        "outputId": "ff32c61b-3373-4832-9ad8-1670603c3e13"
       },
       "source": [
         "# Summary of the dataset with names, non null values counts and data types\n",
         "tot.info()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -499,7 +499,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "7b0c6bdd-47c9-4f14-aae3-6c83f64f4bc2"
+        "outputId": "76673276-bc21-4052-b0c2-51faf026b636"
       },
       "source": [
         "# Drugs in the dataset\n",
@@ -533,7 +533,7 @@
         "plt.savefig('Drugs distr.png', bbox_inches='tight')\n",
         "plt.show()\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -564,7 +564,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -575,7 +575,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "2634e9f1-43a1-49de-c0b3-dad5296bef22"
+        "outputId": "29f4e595-cd5d-4350-9ee2-91bee8f38e39"
       },
       "source": [
         "# Plotting drugs distribution after that all the values have been mapped to 0 and 1\n",
@@ -589,7 +589,7 @@
         "plt.savefig('Drug consumption binary.png', bbox_inches='tight')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -613,7 +613,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "1e3bc396-5255-4695-ccb6-730a230a2cec"
+        "outputId": "9ad3bb64-d1e6-4ce8-b6a9-7382d437615d"
       },
       "source": [
         "# Remapping all the categorical attributes to the values they represent\n",
@@ -680,7 +680,7 @@
         "plt.savefig('Features counts.png', bbox_inches='tight')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -704,7 +704,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 687
         },
-        "outputId": "242fab04-6a5d-4ca0-c5c2-a87988c532e8"
+        "outputId": "edaab4b4-6a4c-4d5f-e76e-bb0da040a157"
       },
       "source": [
         "numer_att = [\"Nscore\", \"Escore\", \"Oscore\", \"Ascore\", \n",
@@ -717,7 +717,7 @@
         "plt.savefig('Features correlation.png', bbox_inches='tight')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -741,7 +741,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "39863496-1a12-4b80-8720-90866ab44138"
+        "outputId": "0e88e4f7-d9dd-42c3-d7f3-3eb9ea56e4be"
       },
       "source": [
         "tot[drugs] = tot[drugs].apply(pd.to_numeric)\n",
@@ -753,7 +753,7 @@
         "plt.savefig('Drugs counts.png', bbox_inches='tight')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -777,7 +777,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 949
         },
-        "outputId": "ea6ba4ad-15bf-44e5-e1ab-2b5066ebc52f"
+        "outputId": "c6a8da64-76f8-4379-b2cb-c5c1586ea712"
       },
       "source": [
         "plt.figure(figsize=(16, 16))\n",
@@ -786,7 +786,7 @@
         "plt.savefig('Attributes boxplots.png', bbox_inches='tight')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -818,7 +818,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "24ab993a-93f4-404e-85ec-9b1b9513a214"
+        "outputId": "f7e7e86a-ac8f-44d2-cbbf-bf6526cb3a1c"
       },
       "source": [
         "drug = \"lsd\"\n",
@@ -833,7 +833,7 @@
         "X_train, X_test, y_train, y_test = train_test_split(dataset, target,test_size=0.20, stratify=target, random_state=42)\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,7 +852,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 585
         },
-        "outputId": "03292c0d-f3ac-410e-dab8-0f16f27a36bf"
+        "outputId": "8306d83a-e1e3-4d13-e034-320c35bb905f"
       },
       "source": [
         "# Plotting boxplots of numetrical attributes with respect to the labels\n",
@@ -867,7 +867,7 @@
         "plt.savefig('Boxplots.png', bbox_inches='tight')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -891,7 +891,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 585
         },
-        "outputId": "818e9a06-4562-4c23-e4fc-1723cef6fbd4"
+        "outputId": "e7f2f52a-7683-435a-fd09-fe17f5a59974"
       },
       "source": [
         "# Plotting counts of categorical attributes with respect to the labels\n",
@@ -906,7 +906,7 @@
         "plt.savefig('Counts per label.png', bbox_inches='tight')\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -947,7 +947,7 @@
         "X_train = np.hstack((X_train[numer_att], X_train_enc))\n",
         "X_test = np.hstack((X_test[numer_att], X_test_enc))"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -967,7 +967,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 388
         },
-        "outputId": "05fd1566-d3ab-4fe9-e9d4-bf956b09f692"
+        "outputId": "729a6c21-a499-4a21-cb9e-25468e1a9f94"
       },
       "source": [
         "# standardize training set\n",
@@ -995,7 +995,7 @@
         "plt.legend(loc='best')\n",
         "plt.savefig('PCA.png', bbox_inches='tight')\n"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
